tests/error/quotientInteger-bool-wrong-1st-argument.uplc
(program 1.0.0[[(builtin quotientInteger)(con bool True)](con integer 10)])